--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodejs-argo",
+  "name": "Zuabur",
   "version": "8.8.8",
   "description": "Thsi is a node project",
   "main": "index.js",
   "author": "lndxquan",
-  "repository": "https://github.com/lndxquan/nodejs-argo",
+  "repository": "https://github.com/lndxquan/Zeabur",
   "license": "MIT",
   "private": false,
   "scripts": {
